--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,7 @@ body {
         {% csrf_token %}
         <label>Room Name</label>
         <input type="text" name="room_name" id="room_name" width="100px" />
-        <label>Username</label>
+        <label>UserName</label>
         <input type="text" name="username" id="username" width="100px" />
         <input type="submit" value="Enter Room">
     </form>
